# gezeLang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  codegen.py  conftest.py  explainer.py  lexer.py  parser.py  playground.html  pyproject.toml  stats.py  translator.py
.github/workflows/: ci.yml  pages.yml  release.yml
adapters/amharic/: keywords.json
adapters/oromo/: keywords.json
amharicscript/: __init__.py  cli.py  stats.py
docs/: AmharicScript_Design_Doc (1).docx  adding-language.md  architecture.md  getting-started.md  keywords.md
examples/: classes.amh  control_flow.amh  hello.amh  hello.py  lists_and_dicts.amh
gezeLang/: __init__.py  adapter.py  cli.py  codegen.py  explainer.py  lexer.py  parser.py  stats.py
gezeLang/adapters/oromo/: keywords.json
gezeLang/adapters/tigrinya/: keywords.json
tests/: test_codegen.py  test_explainer.py  test_lexer.py  test_stats.py
tests/corpus/: 01_hello.amh  01_hello.py  02_control_flow.py  03_classes.py
vscode-extension/: amharicscript-1.0.0.vsix  extension.js  language-configuration.json  package.json
vscode-extension/snippets/: amharic.code-snippets
vscode-extension/syntaxes/: amharic.tmLanguage.json  gezeLang.tmLanguage.json
website/: index.html  playground.html
website/assets/: app.js  keywords.js  style.css
website/docs/: adding-language.html  getting-started.html  index.html  keywords.html
