[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amharicscript"
version = "1.0.0"
description = "AmharicScript (አማርኛስክሪፕት) - Write Python in Amharic."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Adama Science and Technology University" }
]
