[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gezeLang"
version = "1.1.0"
description = "Write Python in Amharic — ፕሮግራሚንግ በአማርኛ"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["amharic", "ethiopian", "transpiler", "python", "programming-language"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Natural Language :: Amharic",
]
dependencies = []

[project.urls]
Homepage = "https://Bereke1t2.github.io/gezeLang"
Repository = "https://github.com/Bereke1t2/gezeLang"
Documentation = "https://Bereke1t2.github.io/gezeLang/docs/"
"Bug Tracker" = "https://github.com/Bereke1t2/gezeLang/issues"

[project.scripts]
gezeLang = "gezeLang.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gezeLang"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
